mod-auth-openidc (1:2.4.9.4g-1+gcs5.@distro@) @distro@; urgency=low

  * Merged zmartzone 2.4.9.4

 -- Globus Toolkit <support@globus.org>  Wed, 08 Sep 2021 19:15:36 -0400

mod-auth-openidc (1:2.3.2k-1+gcs5.@distro@) @distro@; urgency=low

  * Rebuild for new ubuntu and fedora targets

 -- Globus Toolkit <support@globus.org>  Wed, 09 Jun 2020 19:15:36 -0400

mod-auth-openidc (1:2.3.2j-1+gcs5.@distro@) @distro@; urgency=low

  * Pass list of objects through as claims

 -- Globus Toolkit <support@globus.org>  Wed, 09 Jun 2020 19:15:36 -0400

mod-auth-openidc (1:2.3.2i-1+gcs5.@distro@) @distro@; urgency=low

  * Fix bounds issue

 -- Globus Toolkit <support@globus.org>  Thu, 04 Jun 2020 20:45:02 -0400

mod-auth-openidc (1:2.3.2h-1+gcs5.@distro@) @distro@; urgency=low

  * Add inter-module request-specific OIDCAuthRequestParams

 -- Globus Toolkit <support@globus.org>  Wed, 12 Jun 2018 08:52:02 -0400

mod-auth-openidc (1:2.3.2g-3+gcs5.@distro@) @distro@; urgency=low

  * Upgrade upstream

 -- Globus Toolkit <support@globus.org>  Tue, 03 Oct 2017 16:09:39 -0400