@@ -16,4 +16,7 @@ override_dh_auto_configure:
 %:
 	dh $@  --with autotools-dev --with apache2
 
-.PHONY: override_dh_auto_install override_dh_auto_configure
+override_dh_builddeb:
+	dh_builddeb -- -Zxz
+
+.PHONY: override_dh_auto_install override_dh_auto_configure override_dh_builddeb
