@@ -1,3 +1,9 @@
+mod-auth-openidc (1:2.4.9.4g-2+gcs5.@distro@) @distro@; urgency=low
+
+  * Rebuild for new OS releases
+
+ -- Globus Toolkit <support@globus.org>  Fri, 12 Nov 2021 12:16:36 -0500
+
 mod-auth-openidc (1:2.4.9.4g-1+gcs5.@distro@) @distro@; urgency=low
 
   * Merged zmartzone 2.4.9.4
